[package]
name = "moss-tts-nano"
version = "0.1.0"
edition = "2024"
description = "MOSS-TTS-Nano inference using ONNX Runtime with streaming decode and advanced sampling"
license = "Apache-2.0"
repository = "https://github.com/mzdk100/moss-tts-nano"

[dependencies]
ort = "2.0.0-rc.12"
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
voxudio = "0.7"
rand = "0.10"
rand_pcg = "0.10"
tokio = { version = "1", features = ["fs"] }
futures-util = { version = "0.3", default-features = false }
async-stream = "0.3"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
voxudio = { version = "0.7", features = ["device"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
